k8s/cap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cap-backend-svc
  namespace: prod
spec:
  selector:
    app: cap-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
